--- a/client/styles/listComp.scss
+++ b/client/styles/listComp.scss
@@ -2,18 +2,31 @@
   margin: 20px 0 0 0;
   .list {
     display: flex; justify-content: space-between;
-    border-bottom: 1px solid #414141;
+    border-bottom: 1px solid #251e27;
     padding: 0 20px;
+    .listData {
+      margin: 0 20px 0 0;
+      .title {
+        font-weight: 400;
+        letter-spacing: 0.1rem;
+      }
+      .time {
+        opacity: 0.5;
+        font-size: 0.8rem;
+      }
+    }
     .listAction {
       display: flex; align-items: center;
       .listBtn {
-        border-radius: 0;
-        background-color: transparent;
-        outline: none;
-        border: 1px solid #414141;
-        padding: 5px;
+        border-radius: 50%;
+        background-color: #251e27;
+        width: 40px; height: 40px;
         margin: 5px;
+        cursor: pointer;
       }
     }
+  }
+  .list:nth-of-type(even) {
+    background-color: #120f13;
   }
 }
